update home page

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Hi, i am Amril, A passionate and enthusiastic web and mobile developer with 3+ years of experience. I love new
+    challenges to help me invest all my skills and experience into succeeding them"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/sand-paper.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ballet" />
